# vit-up

./: .gitignore  CNAME  README.md  hubconf.py  index.html  inference_example_colab.ipynb  main.py  pyproject.toml  run_nohup.sh
configs/defaults/: callbacks.yaml  data.yaml  logger.yaml  model.yaml  seed.yaml  trainer.yaml
configs/runs/: dinov3_base.yaml  dinov3_splus.yaml
notebooks/: inference_example.ipynb
scripts/: download_datasets.py  extract_weights.py
vit_up/data/: __init__.py  data_liif.py
vit_up/eval_kits/config/correspondence_2d/: correspondence_2d.yaml
vit_up/eval_kits/config/geometric_correspondence/: navi_correspondence.yaml
vit_up/eval_kits/config/probing/: probing.yaml
vit_up/eval_kits/config/runtime/: runtime_bench.yaml
vit_up/eval_kits/correspondence_2d_toolkit/: README.md  eval_utils.py  metrics.py  run_correspondence_2d.py
vit_up/eval_kits/geometric_correspondence_toolkit/: README.md  evaluate_navi_correspondence.py
vit_up/eval_kits/probing_toolkit/: README.md  loss.py  metrics.py  probe_model.py  run_probing.py
vit_up/eval_kits/runtime_toolkit/: model_analytics.py  run_runtime_bench.py  summarize_runtimes.py
vit_up/eval_kits/upsamplers/: __init__.py  anyup.py  backbone_probe.py  base.py  jafar.py  naf.py  uplift.py  vit_up.py
vit_up/inference/: inference_wrappers.py  vit_up_wrapper.py
vit_up/layers/: __init__.py  continuous_rope.py  cross_attention.py  film.py  layer_init_utils.py  mlp.py  pos_enc.py  query_encoder.py  smart_module_list.py
vit_up/layers/backbones/: dino_vit_base.py  dinov2_vit.py  dinov3_vit.py  pe_inv_bias.py  pe_spectral_filter.py  sample_utils.py  vit_wrapper.py
vit_up/model/: vit_up.py
vit_up/supervision/: losses.py
vit_up/supervision/strategies/: base.py  multi_scale.py  point_wise.py  quadrature.py
vit_up/training/: config.py  lightning_module.py
vit_up/training/callbacks/: __init__.py  vis_helper_callback.py
vit_up/utils/: ckpt_io.py  denoising.py  grid_coords.py  image_processing.py  img_transforms.py  pca_utils.py  pil_img_utils.py  spatial_tokens.py  state_dict_migration.py
vit_up/visualization/: correspondence.py  fig_utils.py
vit_up/visualization/helpers/: attn_vis_helper.py  base.py  pca_vis_helper.py  stack_vis_helper.py
vit_up/visualization/utils/: colors.py  img_ops.py  layout.py
(+68 files in other folders)
