[project]
name = "vit_up"
version = "0.1.1"
description = "ViT-Up: Dense Feature Extraction from Vision Transformers"
readme = "README.md"
# Strictly pin to Python 3.11 (e.g. 3.12.0 - 3.12.x)
requires-python = "==3.11.*"
dependencies = [
    # --- Core Torch Stack ---
    "torch==2.9.0",
    "torchvision==0.24.0",
    "pylint==4.0.5",
    "pytest",

    # --- Training / Optimization ---
    "lightning[pytorch-extra]==2.6.1",
    # "jsonargparse[signatures]==4.46.0",
    # "pytorch-lightning"
    "timm==1.0.25",
    "wandb==0.23.1",
    "accelerate==1.12.0",
    "diffusers==0.36.0",
    "transformers==5.2.0",
    "huggingface-hub==1.4.1",
    "tqdm==4.66.4",
    "numpy==2.0.2",
    "scipy==1.15.0",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "psutil==5.9.8",
    "peft==0.18.1",
    "webdataset==1.0.2",
    "datasets==4.5.0",
    "albumentations==2.0.8",

    # --- Vision / Geometry / IO ---
    "opencv-python==4.12.0.88",
    "matplotlib==3.8.4",
    "pillow==12.1.0",
    "pycocotools==2.0.8",
    "trimesh==4.10.1",
    "open3d==0.18.0",
    "libigl==2.6.1",
    "fvcore==0.1.5.post20221221",
    "imageio==2.34.1",
    "scikit-image==0.26.0",
    "plotly==5.22.0",
    "k3d==2.16.1",
    "ipywidgets==8.1.3",
    "anywidget==0.9.10",
    "ipyevents==2.0.2",
    "IPython==8.26.0",
    "tensorboard==2.20.0",
    "ipykernel==6.29.0",
    "jupyterlab==4.5.3",

    # --- External / Project Specific ---
    "python-dotenv==1.0.1",

    # --- Build Dependencies (Runtime) ---
    "ninja==1.11.1.1",
    "setuptools==75.1.0",
    "wheel==0.44.0",
    "einops==0.8.1",
    "natten==0.21.1+torch290cu128",
    "faiss-gpu-cu12==1.13.2",
]

[project.optional-dependencies]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] 

# -------------------------
# UV Configuration
# -------------------------

[tool.uv]
# 1. WHEEL SOURCES (Merged)
# Both Kaolin and Natten are here so uv can find their pre-built wheels.
find-links = [
    "https://whl.natten.org"
]


[[tool.uv.dependency-metadata]]
name = "torchvision"
version = "0.23.0"
requires-dist = ["torch==2.8.0", "numpy", "pillow!=8.3.*,>=5.3.0"]